# splendor-duel-digital

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h
.github/workflows/: ci.yaml
src/: .gitignore
src/Qt/app/: board.qt.cpp  card_view.qt.cpp  color_popup.qt.cpp  draws.qt.cpp  joker_popup.qt.cpp  main_window.qt.cpp  player_input_dialog.qt.cpp  text_popup.qt.cpp  token_view.qt.cpp
src/Qt/headers/: board.qt.h  card_view.qt.h  choice_popup.qt.h  color_popup.qt.h  deck_or_draw_popup.qt.h  draws.qt.h  joker_popup.qt.h  main_window.qt.h  player_input_dialog.qt.h  text_popup.qt.h  token_view.qt.h  yesno_popup.qt.h
src/core/app/: bag.cpp  board.cpp  card.cpp  deck.cpp  draw.cpp  game.cpp  history.cpp  json.cpp  player.cpp  tokens.cpp  view_bridge.cpp
src/core/headers/: bag.h  board.h  card.h  deck.h  draw.h  game.h  history.h  player.h  privilege.h  tokens.h  view_bridge.h
test/: sample_test.cpp  test_game_initialization.cpp
